fix collapsed titles

--- a/src/base.css
+++ b/src/base.css
@@ -1751,6 +1751,7 @@ th {
 .color-level .initial {
     border-left: 1px solid var(--ls-guideline-color);
     margin-left: -17px;
+    margin-bottom: -30px;
 }
 .lazy-visibility > .fade-enter > .color-level > .flex.flex-col > .initial > div > .breadcrumb {
     font-size: 80%;
@@ -1765,7 +1766,7 @@ th {
     display: none;
 }
 .flex.flex-col > .lazy-visibility:not(:first-child) {
-    margin-top: -52px;
+    margin-top: -25px;
 }
 .lazy-visibility > .fade-enter > .my-2.color-level.px-2 > .flex.flex-col > .content > .flex-1.flex-row.foldable-title > .flex.flex-row.items-center > .block-control svg {
     fill: transparent;
